GC Dental/src/objects/Dealer__c.object
<CustomObject>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <picklist>
            <controllingField>Billing_State__c</controllingField>
            <picklistValues>
                <fullName>Port Blair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adilabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhimavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilakaluripet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindupur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kakinada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karimnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khammam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurnool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machilipatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madanapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahbubnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miryalaguda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nalgonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nandyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narasaraopet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nellore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nizamabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proddatur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Bengal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tripura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uttarakhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uttar Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code__c</fullName>
        <label>Billing Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Sub_Dealer__c</fullName>
        <label>Name of the Sub Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <picklist>
            <controllingField>Shipping_State__c</controllingField>
            <picklistValues>
                <fullName>Port Blair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adilabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhimavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilakaluripet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindupur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kakinada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karimnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Khammam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurnool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machilipatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madanapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahbubnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miryalaguda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nalgonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nandyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narasaraopet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nellore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nizamabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proddatur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <picklist>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Bengal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tripura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uttarakhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uttar Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Code__c</fullName>
        <label>Shipping Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Dealer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Dealer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dealer_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Email__c</columns>
        <columns>Type__c</columns>
        <columns>Billing_City__c</columns>
        <columns>Billing_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dealer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealers</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Mobile_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Mobile__c &lt;&gt; null, NOT(REGEX(Mobile__c ,&quot;(\\d){10}&quot;)), FALSE)</errorConditionFormula>
        <errorMessage>Mobile : Please enter valid 10 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_dealer</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(Type__c , &apos;Sub Dealer&apos; ) , ISBLANK( Name_of_the_Sub_Dealer__c )), TRUE, FALSE )</errorConditionFormula>
        <errorDisplayField>Name_of_the_Sub_Dealer__c</errorDisplayField>
        <errorMessage>Please enter name of the Sub Dealer</errorMessage>
    </validationRules>
</CustomObject>